Change logo and headline

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,83 +1,14 @@
+.description {
+    max-width: 100% !important;
+}
+
 :root {
 
     scroll-behavior: smooth;
 
-    // brand colors
-    --c-brand: #444c74;
-    --c-brand-light: #4c5c84;
-
-    // background colors
-    --c-bg: #ffffff;
-    --c-bg-light: #f3f4f5;
-    --c-bg-lighter: #eeeeee;
-    --c-bg-dark: #ebebec;
-    --c-bg-darker: #e6e6e6;
-    --c-bg-navbar: var(--c-bg);
-    --c-bg-sidebar: var(--c-bg);
-    --c-bg-arrow: #cccccc;
-
-    // text colors
-    --c-text: #2c3e50;
-    --c-text-accent: var(--c-brand);
-    --c-text-light: #3a5169;
-    --c-text-lighter: #4e6e8e;
-    --c-text-lightest: #6a8bad;
-    --c-text-quote: #999999;
-
-    // border colors
-    --c-border: #eaecef;
-    --c-border-dark: #dfe2e5;
-
-    // custom container colors
-    --c-tip: #444c74;
-    --c-tip-bg: var(--c-bg-light);
-    --c-tip-title: var(--c-text);
-    --c-tip-text: var(--c-text);
-    --c-tip-text-accent: var(--c-text-accent);
-    --c-warning: #ffc310;
-    --c-warning-bg: #fffae3;
-    --c-warning-bg-light: #fff3ba;
-    --c-warning-bg-lighter: #fff0b0;
-    --c-warning-border-dark: #f7dc91;
-    --c-warning-details-bg: #fff5ca;
-    --c-warning-title: #f1b300;
-    --c-warning-text: #746000;
-    --c-warning-text-accent: #edb100;
-    --c-warning-text-light: #c1971c;
-    --c-warning-text-quote: #ccab49;
-    --c-danger: #f11e37;
-    --c-danger-bg: #ffe0e0;
-    --c-danger-bg-light: #ffcfde;
-    --c-danger-bg-lighter: #ffc9c9;
-    --c-danger-border-dark: #f1abab;
-    --c-danger-details-bg: #ffd4d4;
-    --c-danger-title: #ed1e2c;
-    --c-danger-text: #660000;
-    --c-danger-text-accent: #bd1a1a;
-    --c-danger-text-light: #b5474d;
-    --c-danger-text-quote: #c15b5b;
-    --c-details-bg: #eeeeee;
-
-    // badge component colors
-    --c-badge-tip: var(--c-tip);
-    --c-badge-warning: #ecc808;
-    --c-badge-warning-text: var(--c-bg);
-    --c-badge-danger: #dc2626;
-    --c-badge-danger-text: var(--c-bg);
-
-    // transition vars
-    --t-color: 0.3s ease;
-    --t-transform: 0.3s ease;
-
-    // code blocks vars
-    --code-bg-color: #282c34;
-    --code-hl-bg-color: rgba(0, 0, 0, 0.66);
-    --code-ln-color: #9e9e9e;
-    --code-ln-wrapper-width: 3.5rem;
-
     // font vars
-    --font-family: -apple-system, 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',  sans-serif;
+    --font-family: -apple-system, 'concourse-t3', 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', sans-serif;
     --font-family-code: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 
     // layout vars
