Implement mailers beta

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,3 +1,7 @@
+/* .vuepress/global.css */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+
 .description {
     max-width: 100% !important;
 }
